--- a/unit1_projects/stylesheets/dbc2.css
+++ b/unit1_projects/stylesheets/dbc2.css
@@ -59,7 +59,7 @@ a:hover {
 	font-family: Helvetica;
 	position: absolute;
 	bottom: -2px;
-	left: 5px;
+	left: 16%;
 	border-radius: 2px;
 	padding: 3px 5px;
 }
