--- a/unit1_projects/stylesheets/blog_template.css
+++ b/unit1_projects/stylesheets/blog_template.css
@@ -10,3 +10,58 @@ html {
 span {
 	font-style: italic;
 }
+
+#header {
+	height: 22px;
+	margin: auto;
+	padding: 6px;
+	border-radius: 4px;
+	position: fixed;
+	background-color: #2b2c30;
+}
+
+#header a {
+	margin: auto;
+	font-size: 18px;
+	padding: 0px 25px;
+}
+
+.left {
+	width: 22%;
+	float: left;
+	margin-top: 50px;
+	padding: 10px;
+	border-radius: 4px;
+	background-color: #2b2c30;
+	font-size: 14px;
+}
+
+.left img {
+	width: 90%;
+	padding-left: 10px;
+}
+
+.right {
+	width: 72%;
+	float: right;
+	margin-top: 50px;
+	padding: 10px;
+}
+
+#footer {
+ clear: both;
+}
+
+a:link {
+	text-decoration: none;
+}
+
+a:visited {
+	text-decoration: none;
+	color: #c6b39d;
+}
+
+a:hover {
+	text-decoration: none;
+	color: #ffffff;
+}
