--- a/unit1_projects/class4/practice/stylesheets/styles.css
+++ b/unit1_projects/class4/practice/stylesheets/styles.css
@@ -2,13 +2,48 @@
 body {
   background-color: rgb(241, 241, 241);
   font-family: 'Lato', Arial, sans-serif;
-  font-size: 16px;
+  font-size: 1em;
   font-weight: 300;
   line-height: 1.2em;
   margin: 0px auto;
   min-width: 960px;
   width: 100%;
 }
+
+@media screen and (max-width: 960px) {
+  body {
+    background-color: rgb(241, 241, 241);
+    font-family: 'Lato', Arial, sans-serif;
+    font-size: 1em;
+    font-weight: 300;
+    line-height: 1.2em;
+    margin: 0px auto;
+    min-width: 500px;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  body {
+    background-color: rgb(241, 241, 241);
+    font-family: 'Lato', Arial, sans-serif;
+    font-size: 1em;
+    font-weight: 300;
+    line-height: 1.2em;
+    margin: 0px auto;
+    width: 100%;
+  }
+
+  #famous article.woman {
+    background-color: white;
+    display: block;
+    min-height: 250px;
+    margin: 1%;
+    opacity: 0.8;
+    padding: 2%;
+  }
+}
+
 
 p {
   margin: 1em;
