changed header from fixed to static

--- a/unit1_projects/stylesheets/blog_template.css
+++ b/unit1_projects/stylesheets/blog_template.css
@@ -16,7 +16,7 @@ span {
 	margin: auto;
 	padding: 6px;
 	border-radius: 4px;
-	position: fixed;
+	position: static;
 	background-color: #2b2c30;
 }
 
