--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -1,27 +1,90 @@
+.clearfix:before,
+.clearfix:after {
+    content:"";
+    display:table;
+}
+.clearfix:after {
+    clear:both;
+}
+
 body {
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Alegreya Sans', sans-serif;
+	background-color: #000000;
+}
+
+#wrapper {
 	max-width: 1000px;
-	border-radius: 1em;
-	border: 0.5em black;
+	margin: 0 auto;
+	background-color: #99ccff;
+	border-radius: 2em;
+}
+
+a:link {
+	text-decoration: none;
+	color: #000000;
+}
+
+a:visited {
+	text-decoration: none;
+	color: #000000;
+}
+
+a:hover {
+	text-decoration: none;
+	color: #666666;
+}
+
+#main {
+	border-radius: 6em;
 	background-color: #99ccff;
 }
 
-#links a {
-	display: inline;
+#links {
 	text-align: center;
-	padding: .4em;
-	font-size: 1.3em;
+	position: relative;
+	float: left;
+	width: 10%;
+}
+
+#links a {
+	display: block;
+	text-align: center;
+	margin-top: 7%;
+}
+
+#links a img {
+	width: 80%;
+	border-radius: 100%;
+}
+
+#blogs {
+	text-align: center;
+	width: 90%;
+	float: right;
+}
+
+#blogs a figure {
+	width: 28%;
+	margin: 2%;
+	display: inline-block;
+	vertical-align: top;
+	font-size: 1.2em;
+}
+
+#blogs a figure img {
+	border-radius: 100%;
+	width: 100%;
 }
 
 header {
-	display: block;
+	display: table;
 	max-width: 1000px;
 	height: 200px;
 	background: url(http://i.imgur.com/8iwBfO0.jpg) center no-repeat;
+	position: top center;
 	font-family: 'Krona One', sans-serif;
 	color: #99ccff;
-	margin-left: auto;
-	margin-right: auto;
+	text-align: center;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -34,23 +97,58 @@ h3 {
 
 header h1 {
 	font-size: 350%;
-	position: relative;
-	top: 18%;
+	display: table-cell;
+	vertical-align: middle;
 }
 
-@media screen and (max-width: 920px) {
+@media screen and (max-width: 820px) {
 	header h1 {
 		font-size: 300%;
-		position: relative;
-		top: 10%;
+		display: table-cell;
+		vertical-align: middle;
+	}
+
+	#blogs a figure {
+		width: 44%;
+		margin: 2%;
+		display: inline-block;
+		vertical-align: top;
+		font-size: 1.2em;
 	}
 }
 
 @media screen and (max-width: 500px) {
 	header h1 {
-		font-size: 250%;
-		position: relative;
-		top: 10%;
+		font-size: 230%;
+		display: table-cell;
+		vertical-align: middle;
+	}
+
+	#blogs a figure {
+		width: 80%;
+		margin: 2%;
+		display: block;
+		vertical-align: top;
+		font-size: 1.2em;
+	}
+
+	#links {
+		position: static;
+		float: none;
+		display: inline-block;
+		width: 17%;
+	}
+
+	#links a {
+		float: none;
+		display: inline-block;
+	}
+
+	#links a img{
+		float: none;
+		position:static;
+		width: 80%;
+		display: inline-block;
 	}
 }
 
